--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,17 @@
 @tailwind base;
-
 @tailwind components;
-
 @tailwind utilities;
+
+body {
+  @apply bg-gray-300;
+}
+
+.bg-white-500 {
+  background-color: #f5f4f4;
+}
+.bg-brown-500 {
+  background-color: #cd9777;
+}
+.bg-black-500 {
+  background-color: #6c757d;
+}
