--- a/styles/index.css
+++ b/styles/index.css
@@ -1,9 +1,13 @@
+/* purgecss start ignore */
 @tailwind base;
 @tailwind components;
+/* purgecss end ignore */
+
 @tailwind utilities;
 
 body {
   @apply bg-gray-300;
+  -webkit-overflow-scrolling: touch;
 }
 
 .bg-white-500 {
